--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -6,12 +6,28 @@ spring:
       server:
         git:
           #  Git仓库地址
-          uri: https://github.com/OKlala1999/SpringCloudYML.git
+          uri: https://github.com/OKlala1999/SpringCloudConfig
           #  Git仓库用户名或邮箱
           username:  OKlala1999
           #  Git仓库密码
           password: a874724873
-
+  rabbitmq:
+    host: localhost
+    username: guest
+    password: guest
+    port: 5672
+  bus:
+    trace:
+      enabled: true     # 开启cloud bus的跟踪
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 server:
   # 指定端口号
   port: 8888
